<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.codechallenge.login.SignUpViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_20dp"
            tools:context=".login.SignUpFragment">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_creation"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_the_form_below_to_submit_your_portfolio_nan_email_and_password_are_required"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/header_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/image_card"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                app:cardCornerRadius="@dimen/dimen_10dp"
                app:cardElevation="@dimen/dimen_5dp"
                android:onClick="@{()->viewModel.onCardViewClick()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitle">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray"
                    app:imageFromBitmap ="@{viewModel.avatarBitmap}"
                    android:scaleType="fitXY" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tap_to_add_avatar"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:visibility="@{viewModel.avatarText?View.GONE:View.VISIBLE}" />
            </androidx.cardview.widget.CardView>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:error="@{viewModel.firstNameError ?  @string/first_name_required : null}"
                app:layout_constraintTop_toBottomOf="@id/image_card">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{(text)->viewModel.onFirstNameChanged(text.toString())}"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:error="@{viewModel.emailError ?  @string/email_address_required : null}"
                app:layout_constraintTop_toBottomOf="@id/first_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{(text)->viewModel.onEmailChanged(text.toString())}"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:error="@{viewModel.passwordError ?  @string/password_required : null}"
                app:layout_constraintTop_toBottomOf="@id/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{(text)->viewModel.onPasswordChanged(text.toString())}"
                    android:hint="@string/password"
                    android:inputType="textVisiblePassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                app:error="@{viewModel.websiteError ?  @string/website_required : null}"
                app:layout_constraintTop_toBottomOf="@id/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:afterTextChanged="@{(text)->viewModel.onWebsiteChanged(text.toString())}"
                    android:hint="@string/website"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="@dimen/dimen_25dp"
                android:onClick="@{()->viewModel.onSubmit()}"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/website" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>